; ModuleID = '/home/carl/AnghaBench/radare2/libr/fs/p/extr_fs_r2.c___flags.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/fs/p/extr_fs_r2.c___flags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"/flags/\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"fq@F:%s\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"fsq\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i8*)* @__flags to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @__flags(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  store i8* null, i8** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @strncmp(i8* %8, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 7)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %14, label %11

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = getelementptr inbounds i8, i8* %12, i64 7
  store i8* %13, i8** %5, align 8
  br label %14

14:                                               ; preds = %11, %2
  %15 = load i8*, i8** %5, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i8*, i8** %5, align 8
  %19 = call i8* @r_str_newf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* %18)
  br label %22

20:                                               ; preds = %14
  %21 = call i8* @strdup(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %17
  %23 = phi i8* [ %19, %17 ], [ %21, %20 ]
  store i8* %23, i8** %6, align 8
  %24 = load i32*, i32** %3, align 8
  %25 = load i8*, i8** %6, align 8
  %26 = load i8*, i8** %5, align 8
  %27 = icmp ne i8* %26, null
  %28 = zext i1 %27 to i64
  %29 = select i1 %27, i32 102, i32 100
  %30 = sitofp i32 %29 to float
  %31 = call i32* @fscmd(i32* %24, i8* %25, float %30)
  store i32* %31, i32** %7, align 8
  %32 = load i8*, i8** %6, align 8
  %33 = call i32 @free(i8* %32)
  %34 = load i32*, i32** %7, align 8
  ret i32* %34
}

declare dso_local i32 @strncmp(i8*, i8*, i32) #1

declare dso_local i8* @r_str_newf(i8*, i8*) #1

declare dso_local i8* @strdup(i8*) #1

declare dso_local i32* @fscmd(i32*, i8*, float) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
